fix: icon/text alignment
for some reason using flexbox with text + icon doesn’t align the items horizontally. This seems to be due to the responsive font-size but that shouldn’t make a difference 🤷‍♂️

--- a/packages/web/src/components/Heading.css
+++ b/packages/web/src/components/Heading.css
@@ -28,4 +28,9 @@
   font-variation-settings: 'wght' 500, 'wdth' 105;
   color: var(--theme11);
   margin-y: 0;
+  line-height: 26px;
+
+  svg {
+    display: inline-block;
+  }
 }
